# Walle

./: .clang-format  CMakeLists.txt
cmake/: clang_format.cmake  libraries.cmake
examples/: CMakeLists.txt
examples/enumerate_devices/: enumerate_devices.cpp
examples/instance/: instance.cpp
walle/: CMakeLists.txt
walle/common/: walle.h
walle/core/: mask.h  structure_chain.h  structure_chain.ipp  type_tools.h
walle/graphics/device/: device.cpp  device.h  device_tools.cpp  device_tools.h  instance.cpp  instance.h
walle/graphics/graphics_types/: graphics_enums.cpp  graphics_enums.def  graphics_enums.h  graphics_enums.ipp  graphics_formats.cpp  graphics_formats.h  graphics_string_tools.cpp  graphics_string_tools.h  graphics_structure_type.def  graphics_structures.h  graphics_structures.ipp
