cmake_minimum_required(VERSION 3.27)

project(Walle LANGUAGES CXX C)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS ON)

include(cmake/clang_format.cmake)
include(cmake/libraries.cmake)
  
FetchContent_MakeAvailable(
  volk
)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-volatile")

set(CMAKE_BUILD_TYPE Debug)

add_definitions(-DPROJECT_SOURCE_DIR="${PROJECT_SOURCE_DIR}")

add_subdirectory(walle)

if(${PROJECT_IS_TOP_LEVEL})
  
  add_clang_format_target(format "build")

  add_subdirectory(examples)

endif()